# rule-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  GOAL.md  README.md  TODO.md
docs/: OPTIMIZATION_ARCHITECTURE.md  RUST_BRIDGE_UPDATE.md  TRANSPORT_BOUNDARY.md  V1_IMPLEMENTATION_STATUS.md
examples/custom_binding/: demo.facts  demo.module  demo_rule.yar
examples/rule_corpus/: supported_builtin_reader.yar  supported_process_pe.yar  unsupported_builtin_reader.yar  unsupported_unknown_field.yar
include/rule_engine/: ast.hpp  benchmark.hpp  client_protocol.hpp  compiler.hpp  custom_fact_fixture.hpp  diagnostic.hpp  evaluation_scheduler.hpp  evaluator.hpp  module_config.hpp  modules.hpp  optimizer.hpp  pattern_fixture_provider.hpp  protocol.hpp  provider_key.hpp  server_output.hpp  trace.hpp  value.hpp
include/rule_engine/windows/: pe_provider.hpp  process_provider.hpp
rust/yara_bridge/: Cargo.toml  build.rs  cbindgen.toml
rust/yara_bridge/src/: abi.rs  ast_bridge.rs  ffi.rs  lib.rs  model.rs  tests.rs
src/: benchmark.cpp  client_protocol.cpp  compiler.cpp  custom_fact_fixture.cpp  evaluation_scheduler.cpp  evaluator.cpp  module_config.cpp  modules.cpp  optimizer.cpp  pattern_fixture_provider.cpp  protocol.cpp  provider_key.cpp  server_output.cpp  trace.cpp
src/proto/rule_engine/: Protocol.proto
src/tools/: rule_engine_benchmark.cpp  rule_engine_check.cpp  rule_engine_client.cpp  rule_engine_server.cpp
src/windows/: pe_provider.cpp  process_provider.cpp
tests/: abort_probe.cpp  benchmark_tests.cpp  optimizer_tests.cpp  parser_bridge_tests.cpp  protocol_tests.cpp  runtime_harness_tests.cpp  scheduler_tests.cpp  semantic_vm_tests.cpp  server_output_tests.cpp  test_main.cpp  trace_tests.cpp
tests/fixtures/: encoded_powershell.yar  server_self.yar
tests/fixtures/custom_binding/: demo.facts  demo.module  demo_rule.yar  retry_policy.module
tests/fixtures/includes/: cycle_a.yar  cycle_b.yar  root.yar  root_bad_field.yar
tests/fixtures/includes/lib/: bad_common.yar  common.yar
tests/support/: rule_engine_test_runtime.hpp
